--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.7",
+    "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-dom": "^18.2.4",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
