--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "draft-js": "^0.11.7",
+    "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
