--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.2.4",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
