--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "dayjs": "^1.11.8",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
+    "html-to-draftjs": "^1.5.0",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
