--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "supabase": "^1.62.4",
