--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "history": "^5.3.0",
     "html-to-draftjs": "^1.5.0",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
