--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "draftjs-to-markdown": "^0.6.0",
     "history": "^5.3.0",
+    "html-prettify": "^1.0.7",
     "html-to-draftjs": "^1.5.0",
     "lodash": "^4.17.21",
     "material-ui-color-picker": "^3.5.1",
