--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "history": "^5.3.0",
     "html-prettify": "^1.0.7",
     "html-to-draftjs": "^1.5.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "material-ui-color-picker": "^3.5.1",
