Add limited PDF export functionality

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "draft-js-export-pdfmake": "^0.1.2",
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
@@ -36,6 +37,7 @@
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "material-ui-color-picker": "^3.5.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
