--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
+    "file-saver": "^2.0.5",
     "history": "^5.3.0",
     "html-prettify": "^1.0.7",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "material-ui-color-picker": "^3.5.1",
     "pdfmake": "^0.2.7",
@@ -73,6 +75,8 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
+    "@types/jszip": "^3.4.1",
     "@types/lodash": "^4.14.195"
   }
 }
